@@ -109,6 +109,9 @@ extern int  __pthread_cond_timedwait_relative(pthread_cond_t*,
 
 /* needed by fork.c */
 extern void __timer_table_start_stop(int  stop);
+extern void __bionic_atfork_run_prepare();
+extern void __bionic_atfork_run_child();
+extern void __bionic_atfork_run_parent();
 
 __END_DECLS
 
