@@ -1,7 +1,13 @@
 Bionic ChangeLog:
 -----------------
 
-Differences between current and Android 2.1:
+Differences between current and Android 2.2:
+
+- Added an implementation of pthread_atfork()
+
+
+-------------------------------------------------------------------------------
+Differences between Android 2.2 and Android 2.1:
 
 - Add support for SH-4 CPU architecture !
 
